tests/lean/specializeAttr.lean.expected.out
specializeAttr.lean:1:17-1:18: error: Invalid specialization argument name `h`: `f1` does not have an argument with this name
specializeAttr.lean:5:15-5:16: error: Invalid specialization argument index `1`: The argument at this index (`f`) has already been specified as a specialization candidate
specializeAttr.lean:9:15-9:16: error: Invalid specialization argument name `f`: It has already been specified as a specialization candidate
specializeAttr.lean:13:13-13:14: error: Invalid specialization argument index `0`: Index must be greater than 0
specializeAttr.lean:17:13-17:15: error: Invalid argument index `9`: `f5` has only 3 arguments
specializeAttr.lean:21:13-21:15: error: Invalid specialization argument name `ff`: `f6` does not have an argument with this name
